--- a/front/styles/Home.module.css
+++ b/front/styles/Home.module.css
@@ -67,22 +67,49 @@
 
 .grid {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   flex-wrap: wrap;
+  border: 1px solid blue;
+  width: 100%;
   max-width: 800px;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
+.card_left {
+  align-self: flex-end;
+  flex-direction: row-reverse;
+}
+
+.card_right {
+  align-self: flex-start;
+  flex-direction: row;
+}
+
+.card_title {
   border: 1px solid #eaeaea;
   border-radius: 10px;
+  width: 20%;
+}
+
+.card_descriptor {
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  width: 70%;
+}
+
+.card_right, .card_left {
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 10px;
+  display: flex;
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: center;
+  color: inherit;
+  text-decoration: aqua;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  width: 90%;
+  /*max-width: 300px;*/
 }
 
 .card:hover,
