--- a/front/styles/Home.module.css
+++ b/front/styles/Home.module.css
@@ -16,3 +16,48 @@
   text-align: center;
   font-size: large;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+
+  margin-top: 20%;
+}
+
+.login_box {
+  border: 3px solid white;
+  text-align: center;
+  line-height: 450%;
+  font-size: 30px;
+  width: 70%;
+  height: 150px;
+}
+
+.text {
+  color: aqua;
+}
+
+.text:hover {
+  text-decoration: underline;
+  color: blue;
+}
+
+.search_box {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  border: 1px solid white;
+  width: 70%;
+  height: auto;
+  padding: 10px;
+  align-items: center;
+}
+
+.content_search {
+
+}
+
+.favorite_box {
+
+}
