--- a/front/styles/Home.module.css
+++ b/front/styles/Home.module.css
@@ -21,8 +21,8 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-
-  margin-top: 20%;
+  border: 1px solid white;
+  margin-top: 20px;
 }
 
 .login_box {
