--- a/front/styles/Sign-In.module.css
+++ b/front/styles/Sign-In.module.css
@@ -8,7 +8,7 @@
 .login_box {
     background: gray;
     border: 4px solid white;
-    margin-top: 35%;
+    margin-top: 30px;
     width: 70%;
     display: flex;
     flex-direction: column;
