--- a/front/styles/Sign-In.module.css
+++ b/front/styles/Sign-In.module.css
@@ -26,6 +26,9 @@
     background: cadetblue;
     border-radius: 10px;
     height: 40px;
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .login_text {
