--- a/front/styles/Home.module.css
+++ b/front/styles/Home.module.css
@@ -19,19 +19,24 @@
 
 .content {
   display: flex;
-  flex-direction: column;
-  width: 80%;
-  border: 1px solid white;
-  margin-top: 20px;
+  flex-direction: row;
+  width: 90%;
+  border: 3px solid green;
+  padding: 1%;
 }
 
-.login_box {
-  border: 3px solid white;
-  text-align: center;
-  line-height: 450%;
-  font-size: 30px;
+.content_left {
+  display: flex;
+  flex-direction: column;
   width: 70%;
-  height: 150px;
+  border: 5px solid red;
+}
+
+.content_right {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  border: 5px solid blue;
 }
 
 .text {
@@ -43,12 +48,12 @@
   color: blue;
 }
 
-.welcome {
+.welcome, .login_box {
   border: 1px solid white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
+  width: 90%;
   font-size: 30px
 }
 
@@ -57,10 +62,38 @@
   flex-direction: column;
   margin-top: 20px;
   border: 1px solid white;
-  width: 70%;
+  width: 90%;
   height: auto;
   padding: 10px;
   align-items: center;
+}
+
+.location {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid pink;
+  align-items: center;
+}
+
+.info_location {
+  display: flex;
+  align-self: center;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  height:100px;
+  padding: 3%;
+  border: 2px solid yellow;
+}
+
+.temperature {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid brown;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  padding:2%;
 }
 
 .content_search {
@@ -68,5 +101,27 @@
 }
 
 .favorite_box {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid pink;
+  width: 100%;
+  align-items: center;
+}
+
+.favorite_loc {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  border: 2px solid green;
+}
+
+.favorite_info {
+  display: flex;
+  flex-direction: column;
 
 }
+
+
+
+
