--- a/front/styles/Home.module.css
+++ b/front/styles/Home.module.css
@@ -21,7 +21,6 @@
   display: flex;
   flex-direction: row;
   width: 90%;
-  border: 3px solid green;
   padding: 1%;
 }
 
@@ -29,14 +28,12 @@
   display: flex;
   flex-direction: column;
   width: 70%;
-  border: 5px solid red;
 }
 
 .content_right {
   display: flex;
   flex-direction: column;
   width: 30%;
-  border: 5px solid blue;
 }
 
 .text {
@@ -53,6 +50,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 200px;
   width: 90%;
   font-size: 30px
 }
@@ -78,9 +77,9 @@
 }
 
 .location {
+  border: 1px solid white;
   display: flex;
   flex-direction: column;
-  border: 2px solid pink;
   align-items: center;
 }
 
@@ -92,13 +91,11 @@
   width: 90%;
   height:100px;
   padding: 3%;
-  border: 2px solid yellow;
 }
 
 .temperature {
   display: flex;
   flex-direction: column;
-  border: 2px solid brown;
   width: 50%;
   align-items: center;
   justify-content: center;
@@ -107,8 +104,8 @@
 
 .favorite_box {
   display: flex;
+  margin-top: 15px;
   flex-direction: column;
-  border: 2px solid pink;
   width: 100%;
   align-items: center;
 }
@@ -118,7 +115,6 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  border: 2px solid green;
 }
 
 .favorite_info {
