--- a/front/styles/Sign-In.module.css
+++ b/front/styles/Sign-In.module.css
@@ -7,7 +7,6 @@
 
 .login_box {
     background: gray;
-    border: 4px solid white;
     margin-top: 30px;
     width: 70%;
     display: flex;
@@ -40,9 +39,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 5px;
-    align-items: flex-start;
+    align-items: center;
     border: 1px solid white;
     border-radius: 5px;
+    padding: 2%;
 }
 
 .form_text {
